--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
     "redux-saga": "^1.2.3"
